Fix scrollbars appearing in IE11

--- a/web/css/jquery-ui-override.css
+++ b/web/css/jquery-ui-override.css
@@ -289,8 +289,3 @@ or dateline overlays to be selectable. */
 #wv-toolbar .ui-button.ui-state-disabled:hover {
   color: #eeee;
 }
-
-/* Overide jQuery joyride */
-body {
-  position: static;
-}
